--- a/McpNetDll.Tests/McpNetDll.Tests.csproj
+++ b/McpNetDll.Tests/McpNetDll.Tests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
@@ -21,6 +22,12 @@
   <ItemGroup>
     <ProjectReference Include="..\McpNetDll\McpNetDll.csproj" />
     <ProjectReference Include="..\MyTestLibrary\MyTestLibrary.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="..\MyTestLibrary\bin\Debug\net9.0\MyTestLibrary.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
