--- a/McpNetDll/McpNetDll.csproj
+++ b/McpNetDll/McpNetDll.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="System.Reflection.MetadataLoadContext" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="words_alpha.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project> 
