--- a/McpNetDll.Web/appsettings.json
+++ b/McpNetDll.Web/appsettings.json
@@ -7,15 +7,6 @@
   },
   "AllowedHosts": "*",
   "DllPaths": [
-    "..\\MyTestLibrary\\bin\\Release\\net9.0\\MyTestLibrary.dll"
+    "S:\\DPB2\\DreamPoeBot.dll"
   ]
-}
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
 }
